# proxai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
proxai/: __init__.py  _run.py  cli.py  db.py  providers.py  server.py
proxai/dashboard/: routes.py
proxai/dashboard/templates/: index.html
tests/: test_providers.py  test_proxy.py  test_server.py
